cli/tests/testdata/run/error_name_non_string.js.out
error: Uncaught Error
throw new ErrorNameNonString();
      ^
    at file:///[WILDCARD]/error_name_non_string.js:[WILDCARD]
